# lattice-gym

./: .gitignore  README.md
.github/workflows/: python-package.yml
abstract_interpreter/: CMakeLists.txt  README.md
abstract_interpreter/example/abstract_interpreter/: parser.cpp
abstract_interpreter/include/: abstract_interpreter.hpp  ast.hpp  interval.hpp  parser.hpp  store.hpp
abstract_interpreter/src/: main.cpp
abstract_interpreter/tests/: 00.c  01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  easy4.c  easy5.c  easy6.c  easy7.c  ifelse1.c
bip/: tutorial.ipynb
bip/instances/onnx/: ToyNet.onnx  sat_v6_c27.onnx
crdt/operation_based_CRDT/: observed_remove_set.py
crdt/state_based_CRDT/: D-counter.py  PN-counter.py  README.md  observed_remove_set.py
exercise3/: READM.md  app.py
exercise3/TCP/: clients.py  server.py
exercise3/g_counter/: client.py  environment.yml  server.py
exercise3/p2p/: peer.py
exercise4/2p-set/: client.py  op_ORset_client.py
exercise4/or-set/: client.py  client_op.py
exercise4/pn-counter/: client.py  op_client.py
latex-template/: bibliography.bib  experiments-besthv-all.tex  experiments-score-all.tex  pcog2023.bbl  pcog2023.run.xml  pcog2023.tex
lattice_exercises/: solutions.tex  unilu.sty  univ-luxembourg-logo.eps
networks/UDP/: client.py  client2.py  server.py
networks/p2p/: server.py
nnv/: CMakeLists.txt  compile_commands.json
nnv/configurations/: acasxu.csv  configuration.yaml  mnist.csv
nnv/include/: abstract_domain.hpp  ast.hpp  deeppoly_domain.hpp  deeppoly_propagation.hpp  interval.hpp  interval_domain.hpp  layer.hpp  log.hpp  naive_interval_propagation.hpp  network.hpp  neuron.hpp  parser.hpp  propagation.hpp  specifications.hpp  symbolic_interval_domain.hpp  symbolic_interval_propagation.hpp  utility.hpp
nnv/src/: main.cpp
nnv_parser/: CMakeLists.txt  compile_commands.json  network_structure.hpp  parser.hpp
nnv_parser/configurations/: cifar10.csv
nnv_parser/include/: abstract_domain.hpp  ast.hpp  deeppoly_domain.hpp  deeppoly_propagation.hpp  interval.hpp  interval_domain.hpp  layer.hpp  naive_interval_propagation.hpp  network.hpp  network_structure.hpp  neuron.hpp  parser.hpp  peglib.h  propagation.hpp  specifications.hpp  symbolic_interval_domain.hpp  symbolic_interval_propagation.hpp  utility.hpp
nnv_parser/src/: main.cpp
nnv_parser/vnnlib/: prop_6-2.vnnlib
operation_based_CRDT/: observed_remove_set.py
p2p/: peer.py  server.py
state_based_CRDT/: G-counter.py  observed_remove_set.py  two_phase_set.py
tests/: easy1.c  easy2.c  easy3.c  easy8.c  easy9.c  ifelse2.c  ifelse3.c
(+5 files in other folders)
